# rust-embedded

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
.claude/: settings.json
common/: Cargo.toml
common/src/: duration.rs  duration_from_ticks.rs  i64_divider.rs  lib.rs
peripherals/: Cargo.toml  README.md
peripherals/src/: lib.rs
peripherals/src/api/: gpio.rs
peripherals/src/fake/: gpio.rs  mod.rs  peri.rs
peripherals/src/stm32g4/: gpio.rs
src/: main.rs
