[package]
name = "rtic-stm32g431-led-blink"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["common", "peripherals"]
resolver = "2"

[dependencies]
# Chip variant is STM32G431CB (B-G431B-ESC1 Discovery kit).
# If you're targeting a different G431 package/flash size, swap the
# "stm32g431" feature below for the matching chip family in
# stm32g4xx-hal's Cargo.toml, and update the probe-rs chip name in
# .cargo/config.toml to match.
stm32g4xx-hal = { version = "0.1.0", features = ["stm32g431", "rt"] }
rtic = { version = "2.3.0", features = ["thumbv7-backend"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
opt-level = 1
